# PaperLight

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.claude/: refactor-plan.md
.claude/commands/: reset-default.md
.claude/research/: themoonlight-features.md  zotero-parsing.md
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/overrides/: bundle.mjs
.design-sync/previews/: AppShell.tsx  Center.tsx  ChatComposer.tsx  ChatEmptyState.tsx  ChatMessage.tsx  ChatPanel.tsx  CommandList.tsx  CommandPalette.tsx  CrossRefText.tsx  FigureExplainPopover.tsx  FloatingSelectionMenu.tsx  HighlightColorPalette.tsx  IconButton.tsx  InsightsPanel.tsx  Markdown.tsx  NotesPanel.tsx  PdfViewer.tsx  ReaderShell.tsx  ReferencesPanel.tsx  ResizeHandle.tsx  RightPanel.tsx  Tab.tsx  (+13 more)
backend/: README.md  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_phase1_init.py  0002_session.py  0003_chunks.py  0004_chat.py
backend/paperlight/: __init__.py  local_user.py  main.py
backend/paperlight/agents/: __init__.py  bib.py  chat.py  chat_graph.py  context.py  explanation_graph.py  highlight_graph.py  podcast_graph.py  pregen.py  references.py  summary_graph.py  translation_graph.py
backend/paperlight/agents/common/: __init__.py  citation.py  critique.py  reranker.py  retriever.py
backend/paperlight/api/: __init__.py  _ownership.py  _sse.py  annotations.py  auth.py  chat.py  deep_search.py  explain.py  library.py  papers.py  podcast.py  tabs.py  translate.py
backend/paperlight/audio/: __init__.py  srt_writer.py  stitcher.py
backend/paperlight/auth/: __init__.py  cookies.py  dependencies.py  google.py  jwt.py
backend/paperlight/config/: __init__.py  ingestion.yaml  models.yaml
backend/paperlight/ingestion/: __init__.py  arxiv.py  bodyfilter.py  chunker.py  config.py  embedder.py  layout.py  parser.py  pipeline.py  render.py  seed.py
backend/paperlight/models/: __init__.py  cache.py  chat.py  chunk.py  collection.py  highlight.py  library_item.py  note.py  paper.py  paper_tag.py  podcast.py  session.py  tab.py  tag.py  user.py
backend/paperlight/observability/: __init__.py  context.py  langfuse_client.py  middleware.py  sentry.py  settings.py
backend/paperlight/providers/: __init__.py  base.py  cache.py  content.py  gemini_provider.py  openai_provider.py  openrouter_provider.py  router.py  stub_provider.py  tts_elevenlabs.py  tts_openai.py
backend/paperlight/schemas/: __init__.py
backend/paperlight/services/: __init__.py  citation_service.py  library_service.py  notion_export.py  recommendation.py
backend/paperlight/storage/: __init__.py  db.py  object_store.py  vector.py
backend/paperlight/utils/: time.py
backend/paperlight/workers/: __init__.py
backend/tests/: __init__.py  conftest.py  test_annotations_export.py  test_annotations_highlights.py  test_annotations_notes.py  test_auth.py  test_bib.py  test_chat.py  test_chat_agent.py  test_context.py  test_db_migration.py  test_deep_search.py  test_explain.py  test_export_notion.py  test_figures_preview.py  test_health.py  test_ingestion.py  test_ingestion_bodyfilter.py  test_ingestion_figures.py  test_library_collections.py  test_library_io.py  test_library_papers.py  test_library_tags.py  test_llm_cache.py  test_observability.py  test_papers.py  test_podcast.py  test_pregen.py  test_pregen_api.py  test_providers.py  test_references.py  test_references_api.py  test_router.py  test_storage.py  test_tabs.py  test_translate.py
config/: agents.yaml  hyperparameters.yaml  loader.py  models.yaml  providers.yaml
docs/: ARCHITECTURE.md  DESIGN.md  PRD.md  ROADMAP.md
frontend/: .gitignore  README.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
(+144 files in other folders)
