[project]
name = "paperlight"
version = "0.0.1"
description = "PaperLight backend — AI paper reader (FastAPI + LangGraph)."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "python-jose[cryptography]>=3.3",
    "pymupdf>=1.27.2.3",
    "boto3>=1.43.11",
    "qdrant-client>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
ingest = [
    "fastembed>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paperlight"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
