[project]
name = "paperlight"
version = "0.0.1"
description = "PaperLight backend — AI paper reader (FastAPI + LangGraph)."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "python-multipart>=0.0.18",
    "pymupdf>=1.27.2.3",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
ingest = [
    "fastembed>=0.8.0",
]
# marker-pdf(정밀 figure/table bbox)는 torch+레이아웃 모델(수 GB)이고 pillow 핀이
# fastembed와 충돌하므로 [tool.uv] conflicts로 분리한다. config/ingestion.yaml의
# parser=marker로 켤 때 `uv sync --extra marker`(또는 `uv pip install marker-pdf`).
# 미설치 시 parser가 자동 폴백한다.
marker = [
    "marker-pdf>=1.0.0",
]

[tool.uv]
# marker(pillow<11)와 ingest/fastembed(pillow>=12, py3.14)는 동시 설치 불가 → 상호배타.
conflicts = [
    [{ extra = "ingest" }, { extra = "marker" }],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paperlight"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
